@@ -21,6 +21,8 @@ http://couchdb-python.googlecode.com/svn/tags/0.2.0
    Javascript can be used.
  * Added `client.Database.update()` method to bulk insert/update
    documents in a database.
+ * The view-server script wrapper has been renamed to `couchpy`.
+ * `couchpy` now supports `--help` and `--version` options.
 
 
 Version 0.1
